--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "kvproto"
 
 [dependencies]
 protobuf = "1.2"
+futures = "0.1"
 
 [dependencies.grpc]
 git = "https://github.com/pingcap/grpc-rs.git"
