--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ futures = "0.1"
 [dependencies.grpc]
 git = "https://github.com/pingcap/grpc-rs.git"
 features = ["static-link"]
+branch = "busyjay/write-buffer"
