use reduce-alarm branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ futures = "0.1"
 
 [dependencies.grpc]
 git = "https://github.com/pingcap/grpc-rs.git"
-branch = "busyjay/dev"
+branch = "busyjay/reduce-alarm"
 features = ["static-link"]
