--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "kvproto"
 [dependencies]
 protobuf = "1.*"
 futures = "0.1"
+bytes = "0.4"
 
 [dependencies.grpc]
 git = "https://github.com/pingcap/grpc-rs.git"
